--- a/01-HTML-Git-CSS/02-Homework/Develop/index.html
+++ b/01-HTML-Git-CSS/02-Homework/Develop/index.html
@@ -8,26 +8,33 @@
 </head>
 
 <body>
+    <!-- #main-header -->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+            <!--aria role description nav-->
+            <nav role="navigation">
+                <ul>
+                    <li>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    </li>
+                    <li>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
+                    </li>
+                    <li>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
-    <div class="hero"></div>
+    <!--banner description-->
+    <div class="hero" role="img" aria-label="team banner image"></div>
     <div class="content">
         <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <!--added alt text description-->
+            <img src="./assets/images/search-engine-optimization.jpg" alt="image of search engine optimization"
+                class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -36,7 +43,9 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <!--added alt text description-->
+            <img src="./assets/images/online-reputation-management.jpg" alt="image of increasing reputation graph"
+                class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -45,7 +54,9 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <!--added alt text description-->
+            <img src="./assets/images/social-media-marketing.jpg" alt="image of tweet share like on social media"
+                class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -57,7 +68,8 @@
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <!--added alt text description-->
+            <img src="./assets/images/lead-generation.png" alt="sales funnel image" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -65,7 +77,8 @@
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <!--added alt text description-->
+            <img src="./assets/images/brand-awareness.png" alt="social awareness image" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -73,13 +86,15 @@
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <!--added alt text description and fixed img tag-->
+            <img src="./assets/images/cost-management.png" alt="manage costs image" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
             </p>
         </div>
     </div>
+    <!-- #main-footer-->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
