--- a/02-CSS-Bootstrap/01-Activities/18-StudentMedia/Unsolved/media-unsolved.html
+++ b/02-CSS-Bootstrap/01-Activities/18-StudentMedia/Unsolved/media-unsolved.html
@@ -5,6 +5,7 @@
 <head>
 
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>HTML</title>
 
@@ -18,11 +19,15 @@
   <div class="wrapper">
 
     <section id="main-content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst. </p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non
+        justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea
+        dictumst. </p>
     </section>
 
     <section id="sidebar">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea dictumst. </p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut tellus sed felis consectetur auctor eget non
+        justo. Nunc in laoreet nunc. Quisque accumsan tincidunt neque, at dictum turpis. In hac habitasse platea
+        dictumst. </p>
     </section>
 
   </div>
