--- a/02-CSS-Bootstrap/01-Activities/11-BootstrapDemo/Unsolved/bootstrap-buttons.html
+++ b/02-CSS-Bootstrap/01-Activities/11-BootstrapDemo/Unsolved/bootstrap-buttons.html
@@ -23,8 +23,17 @@
 
   <meta charset="UTF-8">
   <title>Bootstrap DemoButtons</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 
 </head>
+
+<nav class="nav">
+  <a class="nav-link active"; target="_blank" href="#carouselExampleFade">Carousel</a>
+  <a class="nav-link"; target="_blank"; href="https://www.google.com/">Google</a>
+  <a class="nav-link" href="#">Link</a>
+  <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+</nav>
 
 <body>
 
@@ -35,4 +44,36 @@
 
 </body>
 
+<br>
+<br>
+
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEpJ8uNhyZIlICllp2muIRrZ32lBc9e14Iiw&usqp=CAU" class="d-block w-100" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSEpJ8uNhyZIlICllp2muIRrZ32lBc9e14Iiw&usqp=CAU">
+    </div>
+    <div class="carousel-item">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTia_FRtzDlVManQDV-czS6_BPn0ebNOGW0MQ&usqp=CAU" class="d-block w-100" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTia_FRtzDlVManQDV-czS6_BPn0ebNOGW0MQ&usqp=CAU">
+    </div>
+    <div class="carousel-item">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWTXAjQGs_BUO7nwoElR79Cqp6fMu_erKajw&usqp=CAU" class="d-block w-100" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWTXAjQGs_BUO7nwoElR79Cqp6fMu_erKajw&usqp=CAU">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<br>
+<br>
+
+
 </html>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
