Update Activities folder

--- a/03-JavaScript/01-Activities/07-PromptSushi/Unsolved/prompt-sushi.html
+++ b/03-JavaScript/01-Activities/07-PromptSushi/Unsolved/prompt-sushi.html
@@ -9,6 +9,18 @@
     <script type="text/javascript">
 
     // Write code here!
+    var sushi;
+    var youLike;
+
+    youLike = confirm("Do you like sushi?");
+    sushi = prompt("What kind of sushi do you like?");
+
+    //if (youLike) === {
+
+    
+
+    alert(youLike + " " + sushi)
+    
 
     </script>
 
